[gd_scene load_steps=5 format=2]

[ext_resource path="res://3DControls/rotating_switch/Rotating_Switch.tscn" type="PackedScene" id=1]
[ext_resource path="res://3DControls/Smart_Switch/Smart_Switch.tscn" type="PackedScene" id=4]
[ext_resource path="res://3DControls/control_panel.gd" type="Script" id=5]


[sub_resource type="CubeMesh" id=1]
size = Vector3( 0.6, 0.01, 0.3 )

[node name="Control Panel" type="Spatial"]
script = ExtResource( 5 )

[node name="Rotating_switch_1" parent="." instance=ExtResource( 1 )]

[node name="Rotating_switch_2" parent="." instance=ExtResource( 1 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.275073, 0, 0 )

[node name="MeshInstance" type="MeshInstance" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.125951, -0.00647759, 0 )
mesh = SubResource( 1 )
material/0 = null

[node name="OmniLight" type="OmniLight" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.83887, 1.91338, 0.553944 )
shadow_enabled = true

[node name="Smart_Switch_1" parent="." instance=ExtResource( 4 )]
transform = Transform( 0.05, 0, 0, 0, 0.05, 0, 0, 0, 0.05, -0.142039, -0.00179207, 1.56909e-05 )

[node name="Engine_Startup_Timer" type="Timer" parent="."]
one_shot = true

[node name="Engine_Stopping_Timer" type="Timer" parent="."]
one_shot = true
[connection signal="changed" from="Rotating_switch_1" to="." method="_on_Rotating_switch_1_changed"]
[connection signal="changed" from="Rotating_switch_2" to="." method="_on_Rotating_switch_2_changed"]
[connection signal="changed" from="Smart_Switch_1" to="." method="_on_Smart_Switch_1_changed"]
